<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/text_field_num_faces"
        android:text="@string/dice_roller"
        android:textSize="@dimen/title_text_size"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dice_icon_margin"
        android:src="@drawable/ic_baseline_casino_40"
        android:contentDescription="@string/dice"
        app:layout_constraintBottom_toBottomOf="@+id/title"
        app:layout_constraintEnd_toStartOf="@+id/title"
        app:layout_constraintTop_toTopOf="@+id/title" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dice_icon_margin"
        android:src="@drawable/ic_baseline_casino_40"
        android:contentDescription="@string/dice"
        app:layout_constraintBottom_toBottomOf="@+id/title"
        app:layout_constraintStart_toEndOf="@+id/title"
        app:layout_constraintTop_toTopOf="@+id/title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_field_num_faces"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/input_margin"
        android:hint="@string/number_of_faces"
        app:boxBackgroundColor="@color/grey"
        app:hintTextColor="@android:color/white"
        android:textColorHint="@android:color/white"
        app:endIconTint="@android:color/white"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintBottom_toTopOf="@+id/tv_result_handler">
        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"

            android:inputType="none"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_result_handler"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/result_padding_vertical"
        android:paddingHorizontal="@dimen/result_padding_horizontal"
        android:background="@color/grey"
        android:textAlignment="textEnd"
        android:text="@string/dice_value"
        android:textSize="@dimen/result_text_size"
        app:layout_constraintBottom_toTopOf="@+id/btn_roll"
        app:layout_constraintEnd_toStartOf="@+id/tv_result"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_field_num_faces" />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/result_padding_vertical"
        android:paddingHorizontal="@dimen/result_padding_horizontal"
        android:background="@color/grey"
        android:textAlignment="textStart"
        android:textStyle="bold|italic"
        tools:text="5"
        android:textSize="@dimen/result_text_size"
        app:layout_constraintBottom_toTopOf="@+id/btn_roll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_result_handler"
        app:layout_constraintTop_toBottomOf="@+id/text_field_num_faces" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_roll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/btn_roll_padding"
        android:text="@string/roll_the_dice"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_result_handler"/>

</androidx.constraintlayout.widget.ConstraintLayout>